K8sDeploymentStrategy/Canary/canary-deploymentV1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: three-tier-v1
  namespace: canary-namespace
  labels:
    app: three-tier
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: three-tier
      version: v1
  template:
    metadata:
      labels: 
        app: 
        version: v1
    spec:
      containers:
      - name: three-tier
        image: vaishnavi639/three-tier:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
