K8sDeploymentStrategy/Canary/canary-deploymentV2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: three-tier-v2
  namespace: canary-namespace
  labels:
    app: three-tier
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: three-tier
      version: v2
  template:
    metadata:
      labels:
        app: three-tier
        version: v2
    spec:
      containers:
      - name: three-tier
        image: vaishnavi639/three-tier:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
